2006-03-05  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/FindSleepFunction.cmake: sync to OpenAL version

	* Makefile.am: add CMake Modules to EXTRA_DIST

	* CMakeLists.txt: make more windows friendly; variables
	OPENAL_INCLUDE_DIR and OPENAL_LIB_DIR introduced

2006-02-13  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/Makefile.am: Added version info.

2006-02-16  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: don't check for unistd.h twice

2006-02-13  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: forgot to delete old visibility macro; use OpenAL
	module for sleep function detection; define _POSIX_C_SOURCE and add
	comments from configure.ac

2006-02-13  Sven Panne  <sven.panne@aedion.de>

	* configure.ac: We might need nanosleep, which is a POSIX IEEE Std
	1003.1b-1993 feature, so tell our system headers about that. Fixes the
	build e.g. on an old SuSE 8.2 distro.

	* NEWS: Fixed release date.

	* doc/alut.html: Fixed broken link.

2006-02-11  Sven Panne  <sven.panne@aedion.de>

	* Released Version 1.0.1, CVS tag is "freealut_1_0_1".

2006-02-07  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: Define __NO_CTYPE

2006-02-07  Sven Panne  <sven.panne@aedion.de>

	* admin/RPM/freealut.spec: Bumped to 1.0.1, too. We should really
	automate this.

	* NEWS, src/alutUtil.c: When nanosleep returns early due to a signal,
	continue sleeping, otherwise return AL_FALSE from alutSleep.

	* NEWS: Prepared for 1.0.1 release, probably more to come.

	* configure.ac: Use AC_DEFINE instead of specifying preprocessor defines
	by hand. Added a tiny comment.

2006-02-06  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: Use modules written for OpenAL, fixing various issues;
	bumped version.

	* admin/CMakeModules/FindCompilerAttribute.cmake,
	admin/CMakeModules/FindCompilerFlagsSet.cmake,
	admin/CMakeModules/FindCompilerVisibility.cmake,
	admin/CMakeModules/admin/CMakeModules/FindConfigHelper.cmake,